# opengl-demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  imgui.ini
header/: ErrorManager.hpp  IndexBuffer.hpp  Renderer.hpp  Shader.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
include/: Core.h  ErrorManager.h  IndexBuffer.h  Input.h  Log.h  Renderer.h  Shader.h  Test.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.h
lib/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
scripts/: build.sh  pull.sh
shaders/: BasicShader.shader  circle_shader.shader  test_3d_cube.shader
src/: Application.cpp  ErrorManager.cpp  IndexBuffer.cpp  IndexBuffer.hpp  Input.cpp  Log.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Test.cpp  Texture.cpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp  Window.cpp  main.cpp
src/header/: ErrorManager.h  Renderer.h  Shader.h  Texture.h  VertexBufferLayout.h
src/include/: ErrorManager.h  IndexBuffer.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/test/: Test.cpp  Test.h  TestBatchRendering.cpp  TestBatchRendering.h  TestClearColor.cpp  TestClearColor.h  TestTexture2d.cpp  TestTexture2d.h
src/texture/: cube_texture.h
test/test_3d_cube/: test_3d_cube.cpp  test_3d_cube.h
test/test_clear_color/: TestClearColor.cpp  TestClearColor.h
test/test_polygons/: test_polygons.cpp  test_polygons.h
test/test_texture_2d/: TestTexture2d.cpp  TestTexture2d.h
test/test_video/: TestVideo.cpp  TestVideo.h
test/video_rendering/: video_rendering.cpp  video_rendering.h
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
xcode/Debug/: learn-opengl
xcode/learn-opengl.build/Debug/ALL_BUILD.build/: Script-7BFC599A7D7142499BAA5FAC.sh  Script-D2B29F9256B347E68CB95ACE.sh  dgph  dgph~
xcode/learn-opengl.build/Debug/ZERO_CHECK.build/: Script-E5318CC3CA9E4B9B874887EF.sh  Script-EF78B41EF501401E83634BE9.sh  dgph  dgph~
xcode/learn-opengl.build/Debug/glad.build/: dgph  dgph~
xcode/learn-opengl.build/Debug/glad.build/Objects-normal/x86_64/: glad.LinkFileList  glad.d
xcode/learn-opengl.build/Debug/learn-opengl.build/: dgph  dgph~
xcode/learn-opengl.build/Debug/learn-opengl.build/Objects-normal/x86_64/: ErrorManager.d  IndexBuffer.d  Renderer.d  Shader.d  Test.d  TestClearColor.d  Texture.d  VertexArray.d  VertexArray.dia  VertexBuffer.d  imgui.d  imgui_demo.d  imgui_draw.d  imgui_impl_glfw.d  imgui_impl_opengl3.d  imgui_widgets.d  learn-opengl.LinkFileList  main.d  stb_image.d
xcode/learn-opengl.xcodeproj/: project.pbxproj
xcode/learn-opengl.xcodeproj/project.xcworkspace/xcuserdata/giancedrickepilan.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/learn-opengl.xcodeproj/xcshareddata/xcschemes/: learn-opengl.xcscheme
xcode/learn-opengl.xcodeproj/xcuserdata/giancedrickepilan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/learn-opengl.xcodeproj/xcuserdata/giancedrickepilan.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/lib/glfw/: cmake_install.cmake  cmake_uninstall.cmake
xcode/lib/glfw/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  uninstall_cmakeRulesBuildPhase.makeRelWithDebInfo  uninstall_cmakeRulesBuildPhase.makeRelease
xcode/lib/glfw/GLFW.xcodeproj/: project.pbxproj
xcode/lib/glfw/src/: cmake_install.cmake
xcode/lib/glfw/src/learn-opengl.build/Debug/glfw.build/: dgph  dgph~
xcode/lib/glfw/src/learn-opengl.build/Debug/glfw.build/Objects-normal/x86_64/: cocoa_init.d  cocoa_joystick.d  cocoa_monitor.d  cocoa_time.d  cocoa_window.d  context.d  egl_context.d  glfw3.LinkFileList  init.d  input.d  monitor.d  nsgl_context.d  osmesa_context.d  posix_thread.d  vulkan.d  window.d
xcode/lib/glm/: CTestTestfile.cmake  cmake_install.cmake
xcode/lib/glm/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
xcode/lib/glm/glm/: CTestTestfile.cmake  cmake_install.cmake
xcode/lib/glm/glm.xcodeproj/: project.pbxproj
